--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.20.2",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.12",
-    "@types/react": "^17.0.0 || ^18.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@babel/core": "7.20.2",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@mui/icons-material": "5.10.9",
+    "@mui/material": "5.10.12",
+    "@mui/system": "5.10.13",
+    "@mui/x-date-pickers": "5.0.7",
+    "@types/react": "18.0.25",
+    "date-fns": "2.29.3",
+    "dayjs": "1.11.6",
+    "events": "3.3.0",
+    "luxon": "3.1.0",
+    "module": "1.2.5",
+    "moment": "2.29.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-toastify": "9.1.1",
+    "react-toastr": "1.1.2",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
